<resources>
    <string name="app_name">MyNote</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="contents">Contents</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="select_theme">Switch to night theme?</string>
    <string name="add_dividers">Add dividing lines between notes?</string>
    <string name="add_new_note">Add new note...</string>
    <string name="note_empty">Check the title and contents fields are not empty.</string>
    <string name="note_saved">Note saved!</string>
    <string name="note_deleted">Note deleted!</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>